Fix logo being too big on safari
Fix #136

--- a/app/styles/components/app-header.styl
+++ b/app/styles/components/app-header.styl
@@ -27,6 +27,9 @@
     > .container > .mainnav > .homelink
         flex: 1
 
+    > .container > .mainnav > .homelink > .logo
+        width: 100%
+
     > .container > .mainnav > .links
         align-items: center
         display: flex
